syntax = "proto3";
package user;

service User {
    rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
}

message CreateUserRequest {
    string name = 1;
    string email = 2 ;
}

message UserResponse {
    string ID = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
}